examples/invalid_typed_messages/duplicate_type_across_modules/src/main.argx
module main
import messages.other
type Shared { value: string }
